deploy_mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    app: mysql
spec:
  
  containers:
    - name: mysql
      image: mysql:5.7
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: data-volume
        - mountPath: /etc/mysql/conf.d
          name: conf-volume
          readOnly: true
      resources:
        requests:
            cpu: '250m'
            memory: '64Mi'
        limits:
            cpu: '500m'
            memory: '256m'
            
  volumes:
    - name: conf-volume
      configMap:
        name: mysql-config
    - name: data-volume
      persistentVolumeClaim:
        claimName: mysql-pv-claim # 与PVC中的metadata.name一致
# Compare this snippet from mysql.yaml:
#      hostPath:
#        # directory location on host
#        path: /home/mysql/data
#        # this field is optional
#        type: DirectoryOrCreate
