secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
spec:
  restartPolicy: Always
  containers:
    - name: mysql
      
      image: mysql:5.7
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: data-volume
        - mountPath: /etc/mysql/conf.d
          name: conf-volume
          readOnly: true
  volumes:
    - name: conf-volume
      configMap:
        name: mysql-config
    - name: data-volume
      hostPath:
        # directory location on host
        path: /home/mysql/data
        # this field is optional
        type: DirectoryOrCreate
